--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.event.pull_request.merged == true || github.event_name == 'push'
 
     steps:
@@ -31,4 +31,12 @@ jobs:
             local-image: ieeecicd
             image: ieeecicd:latest, ieeecicd:latest
 
+        - name: Stop container
+          run: sh stop-container.sh
+
+        - name: ECR auth
+          run: aws ecr get-login-password --region us-east-2 | sudo docker login --username AWS --password-stdin 107777906079.dkr.ecr.us-east-2.amazonaws.com
+        
+        - name: Run container
+          run: sh run-container.sh
 
