--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
           uses: actions/checkout@v2
 
         - name: build docker image
-          run: docker build -t ieeecicd .
+          run: sudo docker build -t ieeecicd .
 
         - name: Push to ECR
           id: ecr
